@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Added better sandboxing (stolen straight from Plack::Util) for coderefs
+         to avoid accidental leakage
+       - Sandboxing also makes $0 and thus FindBin et al work in perl scripts
 
 0.002000  2012-02-28 21:20:48 CST6CDT
        - Added DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator::ScriptHelpers,
